--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     <div class="container">
       <div class="footer-content">
         <p>© <span id="currentYear"></span> Instituto Juan Ramón Jimenez. Página creada por <a
-            href="https://www.linkedin.com/in/josé-alberto-rodríguez1998" target="_blank">José Alberto Rodríguez</a>.
+            href="https://www.josearodriguez.com.ar" target="_blank">José Alberto Rodríguez</a>.
         </p>
         <nav class="social-links" aria-label="Redes sociales">
           <a href="https://www.facebook.com/instjuanramonjimenez" target="_blank" rel="noopener noreferrer"
