--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <span class="line"></span><span class="line"></span><span class="line"></span>
       </button>
       <nav id="primaryNav" class="nav">
+        <button class="nav-close" id="menuClose" aria-label="Cerrar menú">×</button>
         <ul>
           <li><a href="#inicio">Inicio</a></li>
           <li><a href="#niveles">Niveles</a></li>
@@ -400,8 +401,8 @@
           <div class="card contact-info">
             <h3>Información institucional</h3>
             <p><strong>Dirección:</strong> Gabriela Mistral 3443, Garín, Pdo. de Escobar</p>
-            <p><strong>Teléfono:</strong> (0348) 447-5030</p>
-            <p><strong>Correo:</strong> instjrjimenez@gmail.com</p>
+            <p><strong>Teléfono:</strong> 11-7500-8571 / 11-7530-3049</p>
+            <p><strong>Correo:</strong> institutojrjimenez@hotmail.com</p>
             <p><strong>Horarios de atención:</strong> Lun a Vie, 8:00 a 17:00</p>
             <div class="map-container">
               <iframe
